Fix overflow

--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body {
   padding: 0.5rem;
 }
 
+pre {
+  white-space: pre-wrap;
+}
+
 h1 {
   border-bottom: 0.15rem solid;
   padding-bottom: 0.2rem;
@@ -42,6 +46,11 @@ header {
 
 nav {
   overflow: auto;
+}
+
+.head, .whatis {
+  overflow-wrap: anywhere;
+  table-layout: fixed;
 }
 
 .sections {
@@ -77,7 +86,7 @@ dd, li {
 }
 
 .names {
-  max-width: 15rem;
+  width: min(15rem, 40vw);
   vertical-align: top;
 }
 
